Bugs da página de dispositivo - registro de usuario - imagem atual

--- a/.env
+++ b/.env
@@ -2,7 +2,8 @@ APP_NAME=Laravel_SIF
 APP_ENV=local
 APP_KEY=base64:d6n8vTA6zOoTJdfep296o4E+4vshHvJVqIBfPtyImmE=
 APP_DEBUG=true
-APP_TIMEZONE=UTC
+APP_TIMEZONE=America/Sao_Paulo
+
 APP_URL=http://localhost:8000
 
 APP_LOCALE=en
